# energy-tensor-cone

./: .gitignore  README.md  run_tests.sh
.github/workflows/: ci.yml
docs/: TERMINAL_FIX.md  TODO-BLOCKED.md  TODO-completed.md  TODO.md  test_validation.md  theorem_verification.md  verification.md
docs/history/: history.md
lean/: lake-manifest.json  lakefile.lean
lean/.lake/: lakefile.olean  lakefile.olean.trace
lean/src/: AQEI.lean  AQEIFamilyInterface.lean  AQEIToInterface.lean  AQEI_Generated_Data.lean  AQEI_Generated_Data_Rat.lean  AffineToCone.lean  ConeProperties.lean  ExtremeRays.lean  FinalTheorems.lean  FiniteToyModel.lean  GeneratedCandidates.lean  Lorentz.lean  Phase2_Vertex_Proof.lean  PolyhedralVertex.lean  StressEnergy.lean  VertexVerification.lean  VertexVerificationRat.lean  WarpConeAqei.lean
mathematica/: search.m
papers/: aqei-cone-formalization-body.tex  aqei-cone-formalization-cqg-anon.tex  aqei-cone-formalization-cqg.tex  aqei-cone-formalization.bib  aqei-cone-formalization.tex  common-bib.tex  common-preamble.tex  common-theorems.tex  draft.bib  draft.md  draft.tex
python/: analyze_results.py  check_rational_values.py  orchestrator.py  plot_bound_comparison.py  pyproject.toml  sanity_checks.py
python/aqei_cone_pipeline.egg-info/: PKG-INFO  SOURCES.txt
scripts/: refresh-manuscript-source.sh  refresh-supplements.sh
supplements/: README-supplements.md
tests/: build_lean.sh  check_deps.sh  lean_tests.sh  mathematica_tests.sh  python_tests.sh
tools/: generate_lean_data.py  translate_vertex.py  verify_vertex.py
(+6 files in other folders)
